<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <pl.kossa.myflights.views.appbars.BackAppBar
        android:id="@+id/backAppbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/airportSwipeRefresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?actionBarSize">

        <androidx.core.widget.NestedScrollView
            android:id="@+id/nestedScrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/airportIv"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginTop="64dp"
                    android:src="@drawable/ic_airport_rounded"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <pl.kossa.myflights.views.ElementWithTagView
                    android:id="@+id/nameEwt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    app:layout_constraintTop_toBottomOf="@id/airportIv"
                    app:tagText="@string/airport_name" />

                <pl.kossa.myflights.views.ElementWithTagView
                    android:id="@+id/cityEwt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    app:layout_constraintTop_toBottomOf="@id/nameEwt"
                    app:tagText="@string/airport_city" />

                <pl.kossa.myflights.views.ElementWithTagView
                    android:id="@+id/icaoCodeEwt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    app:layout_constraintTop_toBottomOf="@id/cityEwt"
                    app:tagText="@string/airport_icao_code" />

                <pl.kossa.myflights.views.ElementWithTagView
                    android:id="@+id/towerFrequencyEwt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    app:layout_constraintTop_toBottomOf="@id/icaoCodeEwt"
                    app:tagText="@string/airport_towerFrequency" />


                <pl.kossa.myflights.views.ElementWithTagView
                    android:id="@+id/groundFrequencyEwt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    app:layout_constraintTop_toBottomOf="@id/towerFrequencyEwt"
                    app:tagText="@string/airport_groundFrequency" />

                <TextView
                    android:id="@+id/runwaysTv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="24dp"
                    android:fontFamily="@font/poppins_medium"
                    android:textColor="@color/black_day_night"
                    android:textSize="@dimen/middle_text_size"
                    android:text="@string/runways"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/groundFrequencyEwt" />


                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/runwaysRecyclerView"
                    android:layout_margin="24dp"
                    android:background="@drawable/element_background"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="2dp"
                    app:layout_constraintBottom_toTopOf="@id/addRunwayButton"
                    app:layout_constraintTop_toBottomOf="@id/runwaysTv"
                    tools:listitem="@layout/element_runway" />

                <androidx.appcompat.widget.AppCompatButton
                    style="@style/BlackButton"
                    android:id="@+id/addRunwayButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:text="@string/add_runway"
                    app:layout_constraintTop_toBottomOf="@id/runwaysRecyclerView"
                    />

                <androidx.appcompat.widget.AppCompatButton
                    style="@style/BlackButton"
                    android:id="@+id/editButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:text="@string/edit"
                    app:layout_constraintTop_toBottomOf="@id/addRunwayButton"
                    app:layout_constraintBottom_toBottomOf="parent" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>