<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <pl.kossa.myflights.views.appbars.SaveAppBar
        android:id="@+id/saveAppBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/airportIv"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="64dp"
                android:src="@drawable/ic_airport_rounded"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/nameTil"
                style="@style/OutlinedTil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:hint="@string/airport_name"
                app:layout_constraintTop_toBottomOf="@id/airportIv">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/nameTie"
                    style="@style/OutlinedTie"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/cityTil"
                style="@style/OutlinedTil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:hint="@string/airport_city"
                app:layout_constraintTop_toBottomOf="@id/nameTil">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/cityTie"
                    style="@style/OutlinedTie"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/icaoCodeTil"
                style="@style/OutlinedTil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:hint="@string/airport_icao_code"
                app:layout_constraintTop_toBottomOf="@id/cityTil">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/icaoCodeTie"
                    style="@style/OutlinedTie"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:maxLength="4" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/towerFrequencyTil"
                style="@style/OutlinedTil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:hint="@string/airport_towerFrequency"
                app:layout_constraintTop_toBottomOf="@id/icaoCodeTil">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/towerFrequencyTie"
                    style="@style/OutlinedTie"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:maxLength="7" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/groundFrequencyTil"
                style="@style/OutlinedTil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:hint="@string/airport_groundFrequency"
                app:layout_constraintTop_toBottomOf="@id/towerFrequencyTil">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/groundFrequencyTie"
                    style="@style/OutlinedTie"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:maxLength="7" />

            </com.google.android.material.textfield.TextInputLayout>


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/addButton"
                style="@style/BlackButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/airport_save"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/groundFrequencyTil" />

            <ProgressBar
                android:id="@+id/loadingProgressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.appcompat.widget.LinearLayoutCompat>